# van

./: .gitignore  Cargo.toml
Test/: build.gradle.kts  gradle.properties  libs.versions.toml  settings.gradle.kts
Test/common/: build.gradle.kts
Test/paper/: build.gradle.kts
Test/paper/src/main/kotlin/com/plasmoverse/test/: TestPlugin.kt
Test/velocity/: build.gradle.kts
Test/velocity/src/main/kotlin/com/plasmoverse/test/: Config.kt  TestPlugin.kt
Test/velocity/src/main/resources/: config.toml
resources/: README.md
src/: config.rs  error.rs  main.rs
src/maven/: metadata.rs
src/model/: mod.rs  paper_options.rs  plasmo_lib_options.rs  project_options.rs  project_type.rs
src/scaffold/: mod.rs  scaffold_build_gradle_kts.rs  scaffold_config.rs  scaffold_gradle_properties.rs  scaffold_locale.rs  scaffold_module.rs  scaffold_plugin_main.rs  scaffold_project.rs  scaffold_root.rs  scaffold_settings_gradle_kts.rs  scaffold_src.rs
src/templates/: hybrid_common.rs  hybrid_paper.rs  hybrid_root.rs  hybrid_velocity.rs  libs.rs  mod.rs  paper.rs  velocity.rs
src/utils/: copy_resource.rs  mod.rs  string.rs
templates/build_gradle_kts/: hybrid_common.stpl  hybrid_paper.stpl  hybrid_root.stpl  hybrid_velocity.stpl  libs.stpl  paper.stpl  velocity.stpl
templates/build_gradle_kts/base/: all.stpl  non_hybrid_root.stpl  paper.stpl  root.stpl  velocity.stpl
templates/build_gradle_kts/chunk/: publishing.stpl  repositories.stpl
