[package]
name = "van"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
convert_case = "0.6.0"
dialoguer = "0.10.4"
include_dir = "0.7.3"
lazy_static = "1.4.0"
path_macro = "1.0.0"
pipe-trait = "0.4.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
sailfish = "0.6.1"
serde = { version = "1.0.160", features = ["derive"] }
serde-xml-rs = "0.6.0"
thiserror = "1.0.40"
